fix: persistency layer and entity cleanup
* `toString` methods that do not end up in stackoverflows
* more error prune entities that control their own lifecycle
* transform persistent enums to backward compatible ordinal values